Parse 'systemLanguage' as a comma separated list

Now Chrome parses the systemLanguage attribute as a COMMA separated-
list (with optional space), following the SVG specification
for systemLanguage attribute.

The previous behavior was:

- The systemLanguage attribute is a space-separated list
of langtags (the comma separator was treated as a character).

Example:

<text systemLanguage="en-US, zh-Hans,zh-Hant"></text>

Now, the three langtags are: "en-US", "zh-Hans", "zh-Hant".
Before, the three langtags were "en-US,", "zh-Hans,", "zh-Hant".

R=fs@opera.com, schenney@chromium.org

Bug: 732063
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I7738bc4eb77de2c1ca7593dd9277fab14d39cc1f
Reviewed-on: https://chromium-review.googlesource.com/1207250
Reviewed-by: Fredrik Söderquist <fs@opera.com>
Commit-Queue: Fredrik Söderquist <fs@opera.com>
Cr-Commit-Position: refs/heads/master@{#589189}