third_party/blink/renderer/core/svg/svg_static_string_list.cc
@@ -36,11 +36,12 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 namespace blink {
 
 SVGStaticStringList::SVGStaticStringList(SVGElement* context_element,
-                                         const QualifiedName& attribute_name)
+                                         const QualifiedName& attribute_name,
+                                         SVGStringListBase* initial_value)
     : SVGAnimatedPropertyBase(kAnimatedUnknown,
                               context_element,
                               attribute_name),
-      value_(SVGStringList::Create()) {
+      value_(initial_value) {
   DCHECK(context_element);
 }
 
