third_party/blink/renderer/core/svg/svg_string_list_tear_off.cc
@@ -34,10 +34,11 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 namespace blink {
 
 SVGStringListTearOff::SVGStringListTearOff(
-    SVGStringList* target,
+    SVGStringListBase* target,
     SVGAnimatedPropertyBase* binding,
     PropertyIsAnimValType property_is_anim_val)
-    : SVGPropertyTearOff<SVGStringList>(target, binding, property_is_anim_val) {
-}
+    : SVGPropertyTearOff<SVGStringListBase>(target,
+                                            binding,
+                                            property_is_anim_val) {}
 
 }  // namespace blink
