third_party/blink/renderer/core/svg/svg_string_list_tear_off.h
@@ -37,12 +37,12 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 namespace blink {
 
-class SVGStringListTearOff : public SVGPropertyTearOff<SVGStringList> {
+class SVGStringListTearOff : public SVGPropertyTearOff<SVGStringListBase> {
   DEFINE_WRAPPERTYPEINFO();
 
  public:
   static SVGStringListTearOff* Create(
-      SVGStringList* target,
+      SVGStringListBase* target,
       SVGAnimatedPropertyBase* binding,
       PropertyIsAnimValType property_is_anim_val) {
     return new SVGStringListTearOff(target, binding, property_is_anim_val);
@@ -128,7 +128,7 @@ class SVGStringListTearOff : public SVGPropertyTearOff<SVGStringList> {
   }
 
  protected:
-  SVGStringListTearOff(SVGStringList*,
+  SVGStringListTearOff(SVGStringListBase*,
                        SVGAnimatedPropertyBase* binding,
                        PropertyIsAnimValType);
 };
